@@ -23,10 +23,10 @@ import com.ssafy.ddukdoc.domain.user.entity.User;
 import com.ssafy.ddukdoc.domain.user.entity.UserDocRole;
 import com.ssafy.ddukdoc.domain.user.repository.UserDocRoleRepository;
 import com.ssafy.ddukdoc.domain.user.repository.UserRepository;
-import com.ssafy.ddukdoc.global.common.util.AESUtil;
 import com.ssafy.ddukdoc.global.common.util.MultipartFileUtils;
 import com.ssafy.ddukdoc.global.common.util.S3Util;
 import com.ssafy.ddukdoc.global.common.util.blockchain.BlockchainUtil;
+import com.ssafy.ddukdoc.global.common.util.encrypt.data.EncryptionStrategy;
 import com.ssafy.ddukdoc.global.common.util.pdfgenerator.PdfGeneratorUtil;
 import com.ssafy.ddukdoc.global.error.code.ErrorCode;
 import com.ssafy.ddukdoc.global.error.exception.CustomException;
@@ -36,6 +36,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.security.SecureRandom;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -55,11 +56,15 @@ public class ContractService {
     private final SignatureRepository signatureRepository;
     private final RoleRepository roleRepository;
     private final UserDocRoleRepository userDocRoleRepository;
-    private final AESUtil aesUtil;
+//    private final AESUtil aesUtil;
     private final PdfGeneratorUtil pdfGeneratorUtil;
     private final BlockchainUtil blockchainUtil;
+    private final EncryptionStrategy encryptionStrategy;
 
-    public List<TemplateFieldResponseDto> getTemplateFields(String  codeStr){
+    public static final String USER_ID = "userId";
+    public static final String DOCUMENT_ID = "documentId";
+
+    public List<TemplateFieldResponseDto> getTemplateFields(String codeStr) {
 
         TemplateCode templateCode = TemplateCode.fromString(codeStr);
 
@@ -67,18 +72,17 @@ public class ContractService {
                 .orElseThrow(() -> new CustomException(ErrorCode.TEMPLATE_NOT_FOUND, "templateCode", templateCode));
         List<TemplateField> fields = templateFieldRepository.findByTemplateIdOrderByDisplayOrderAsc(template.getId());
 
-        List<TemplateFieldResponseDto> fieldResponses = fields.stream()
-                .map(TemplateFieldResponseDto::of).collect(Collectors.toList());
-
-        return fieldResponses;
+        return fields.stream()
+                .map(TemplateFieldResponseDto::of).toList();
     }
+
     @Transactional
-    public DocumentSaveResponseDto saveDocument(String codeStr, DocumentSaveRequestDto requestDto, Integer userId, MultipartFile signatureFile){
+    public DocumentSaveResponseDto saveDocument(String codeStr, DocumentSaveRequestDto requestDto, Integer userId, MultipartFile signatureFile) {
 
         TemplateCode templateCode = TemplateCode.fromString(codeStr);
         //사용자 조회
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_USER_ID, "userId", userId));
+                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_USER_ID, USER_ID, userId));
 
         // 템플릿 조회
         Template template = templateRepository.findByCode(templateCode.name())
@@ -88,26 +92,24 @@ public class ContractService {
         int pin = generatePinCode();
 
         //Document 엔티티 생성 및 저장
-        Document document = requestDto.toEntity(user,template,pin,templateCode);
+        Document document = requestDto.toEntity(user, template, pin, templateCode);
         Document saveDocument = documentRepository.save(document);
 
         // DocumentFieldValue 엔티티들 생성 및 저장
         saveSenderInfo(requestDto, saveDocument, user);
 
         //서명 파일 저장
-        saveSignature(document,userId,signatureFile);
+        saveSignature(document, userId, signatureFile);
 
         //userID 저장
-        saveUserDocRole(saveDocument,user,requestDto.getRoleId());
+        saveUserDocRole(saveDocument, user, requestDto.getRoleId());
 
-        DocumentSaveResponseDto responseDto = DocumentSaveResponseDto.of(pin,saveDocument.getId());
-
-        return responseDto;
+        return DocumentSaveResponseDto.of(pin, saveDocument.getId());
     }
 
     private void saveUserDocRole(Document document, User user, int roleId) {
         Role role = roleRepository.findById(roleId)
-                .orElseThrow(()-> new CustomException(ErrorCode.INVALID_INPUT_VALUE,"role_id",roleId));
+                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_INPUT_VALUE, "role_id", roleId));
 
         UserDocRole userDocRole = UserDocRole.builder()
                 .user(user)
@@ -117,20 +119,21 @@ public class ContractService {
 
         userDocRoleRepository.save(userDocRole);
     }
+
     //서명 파일을 암호화하여 S3에 저장
     private void saveSignature(Document document, Integer userId, MultipartFile signatureFile) {
         // 사용자 조회
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_USER_ID, "userId", userId));
+                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_USER_ID, USER_ID, userId));
 
         // 사용자 권한 확인
         if (!document.getCreator().getId().equals(userId) &&
                 (document.getRecipient() == null || !document.getRecipient().getId().equals(userId))) {
-            throw new CustomException(ErrorCode.FORBIDDEN_ACCESS, "userId", userId);
+            throw new CustomException(ErrorCode.FORBIDDEN_ACCESS, USER_ID, userId);
         }
 
-        String dirName = "signature/"+document.getId()+"/"+userId;
-        String s3Path = s3Util.uploadEncryptedFile(signatureFile,dirName);
+        String dirName = "signature/" + document.getId() + "/" + userId;
+        String s3Path = s3Util.uploadEncryptedFile(signatureFile, dirName);
 
         Signature signature = Signature.builder()
                 .user(user)
@@ -140,11 +143,12 @@ public class ContractService {
 
         signatureRepository.save(signature);
         //수신자가 서명을 한 상태인 경우 문서 상태 SIGNED로 변경
-        if(document.getRecipient() != null && document.getRecipient().getId().equals(userId)){
+        if (document.getRecipient() != null && document.getRecipient().getId().equals(userId)) {
             document.updateStatus(DocumentStatus.SIGNED);
             documentRepository.save(document);
         }
     }
+
     private void saveSenderInfo(DocumentSaveRequestDto requestDto, Document document, User user) {
         List<DocumentFieldValue> fieldValues = requestDto.getData().stream()
                 .map(fieldValueDto -> {
@@ -153,32 +157,32 @@ public class ContractService {
                                     "template_field_id", fieldValueDto.getFieldId()));
 
                     // 필드 값을 암호화하여 저장
-                    String encryptedValue = aesUtil.encrypt(fieldValueDto.getFieldValue());
+                    String encryptedValue = encryptionStrategy.encrypt(fieldValueDto.getFieldValue());
 
-                    return fieldValueDto.toEntity(document, field, user,encryptedValue);
+                    return fieldValueDto.toEntity(document, field, user, encryptedValue);
 
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         documentFieldValueRepository.saveAll(fieldValues);
-        // 암호화된 값 대신 원본 값으로 DTO 생성
-        //return requestDto.getData();
     }
 
-    private int generatePinCode(){
-        return (int)(Math.random() * 900000) + 100000; // 100000 ~ 999999
+    private int generatePinCode() {
+        SecureRandom secureRandom = new SecureRandom();
+        return secureRandom.nextInt(900000) + 100000; // 100000 ~ 999999
     }
 
     // 서명 파일 다운로드 및 복호화
     public byte[] downloadSignature(Integer documentId, Integer userId) {
         try {
-            // 문서 정보 조회
-            Document document = documentRepository.findById(documentId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.DOCUMENT_NOT_FOUND, "documentId", documentId));
+            // 문서 존재 여부 확인
+            if (!documentRepository.existsById(documentId)) {
+                throw new CustomException(ErrorCode.DOCUMENT_NOT_FOUND, DOCUMENT_ID, documentId);
+            }
 
             // 서명 정보 조회
             Signature signature = signatureRepository.findByDocumentIdAndUserId(documentId, userId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.SIGNATURE_FILE_NOT_FOUND, "documentId", documentId));
+                    .orElseThrow(() -> new CustomException(ErrorCode.SIGNATURE_FILE_NOT_FOUND, DOCUMENT_ID, documentId));
 
             // S3에서 파일 다운로드 및 복호화
             String s3Path = signature.getFilePath();
@@ -195,54 +199,54 @@ public class ContractService {
 
     @Transactional
     public void saveRecipientInfo(Integer documentId, RecipientInfoRequestDto requestDto,
-                                       Integer userId, MultipartFile signatureFile) {
+                                  Integer userId, MultipartFile signatureFile) {
         // 1. 문서 유효성 검증
         Document document = validateDocument(documentId, userId, requestDto.getRoleId());
 
         // 2. 사용자 조회
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_USER_ID, "userId", userId));
+                .orElseThrow(() -> new CustomException(ErrorCode.INVALID_USER_ID, USER_ID, userId));
 
         // 3. DocumentFieldValue 엔티티 생성 및 저장 (데이터 암호화 후 저장)
         saveRecipientFieldValues(requestDto, document, user);
-        List<DocumentFieldValue> documentFieldValues  = documentFieldValueRepository.findAllByDocumentIdOrderByFieldDisplayOrder(documentId);
+        List<DocumentFieldValue> documentFieldValues = documentFieldValueRepository.findAllByDocumentIdOrderByFieldDisplayOrder(documentId);
         List<DocumentFieldDto> savedFieldValues = documentFieldValues.stream()
                 .map(value -> {
                     // 암호화된 필드 값 복호화 (필요한 경우)
                     String decryptedValue = value.getFieldValue();
                     try {
-                        decryptedValue = aesUtil.decrypt(value.getFieldValue());
+                        decryptedValue = encryptionStrategy.decrypt(value.getFieldValue());
                     } catch (Exception e) {
                         log.warn("필드 값 복호화 실패: {}", e.getMessage());
                     }
                     // DocumentFieldDto 객체로 변환
                     return DocumentFieldDto.of(value, decryptedValue);
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         // 4. 서명 파일 저장
         saveSignature(document, userId, signatureFile);
 
         // 5. 서명 맵 생성
         Map<Integer, byte[]> signatures = signatureRepository.findAllByDocumentId(documentId).stream()
-            .collect(Collectors.toMap(
-                signature -> {
-                    Optional<UserDocRole> userDocRole = userDocRoleRepository
-                            .findByDocumentIdAndUserId(documentId, signature.getUser().getId());
+                .collect(Collectors.toMap(
+                        signature -> {
+                            Optional<UserDocRole> userDocRole = userDocRoleRepository
+                                    .findByDocumentIdAndUserId(documentId, signature.getUser().getId());
 
-                    if (userDocRole.isPresent()) {
-                        log.info("Mapping signature - User ID: {}, Role ID: {}",
-                                signature.getUser().getId(),
-                                userDocRole.get().getRole().getId());
-                        return userDocRole.get().getRole().getId();
-                    } else {
-                        log.warn("Cannot map signature for user {}", signature.getUser().getId());
-                        return null;
-                    }
-                },
-                signature -> s3Util.downloadAndDecryptFileToBytes(signature.getFilePath()),
-                (v1, v2) -> v1 // 중복 키 처리 로직
-            ));
+                            if (userDocRole.isPresent()) {
+                                log.info("Mapping signature - User ID: {}, Role ID: {}",
+                                        signature.getUser().getId(),
+                                        userDocRole.get().getRole().getId());
+                                return userDocRole.get().getRole().getId();
+                            } else {
+                                log.warn("Cannot map signature for user {}", signature.getUser().getId());
+                                return null;
+                            }
+                        },
+                        signature -> s3Util.downloadAndDecryptFileToBytes(signature.getFilePath()),
+                        (v1, v2) -> v1 // 중복 키 처리 로직
+                ));
 
 
         // 6. 문서 PDF 생성
@@ -252,11 +256,11 @@ public class ContractService {
                 signatures
         );
 
-        byte[] pdfData = (byte[])result.get("pdfData");
-        String docName = (String)result.get("docName");
+        byte[] pdfData = (byte[]) result.get("pdfData");
+        String docName = (String) result.get("docName");
 
         // 7. 문서 해시 생성 및 블록체인 저장
-        blockchainUtil.saveDocumentInBlockchain(pdfData,TemplateCode.fromString(document.getTemplate().getCode()),docName);
+        blockchainUtil.saveDocumentInBlockchain(pdfData, TemplateCode.fromString(document.getTemplate().getCode()), docName);
 
         // 8. 암호화된 PDF S3 저장
         String pdfPath = saveEncryptedPdf(pdfData, document);
@@ -265,15 +269,16 @@ public class ContractService {
         updateDocumentStatus(document, pdfPath);
 
     }
+
     // 문서 유효성 검증 메서드
     private Document validateDocument(Integer documentId, Integer userId, Integer roleId) {
         // 문서 조회
         Document document = documentRepository.findById(documentId)
-                .orElseThrow(() -> new CustomException(ErrorCode.DOCUMENT_NOT_FOUND, "documentId", documentId));
+                .orElseThrow(() -> new CustomException(ErrorCode.DOCUMENT_NOT_FOUND, DOCUMENT_ID, documentId));
 
         // 문서의 수신자가 맞는지 확인
         if (document.getRecipient() == null || !document.getRecipient().getId().equals(userId)) {
-            throw new CustomException(ErrorCode.FORBIDDEN_ACCESS, "userId", userId);
+            throw new CustomException(ErrorCode.FORBIDDEN_ACCESS, USER_ID, userId);
         }
 
         // 문서 상태가 WAITING인지 확인
@@ -282,11 +287,13 @@ public class ContractService {
         }
 
         // 역할 검증
-        Role ignored = roleRepository.findById(roleId)
-                .orElseThrow(() -> new CustomException(ErrorCode.ROLE_NOT_FOUND, "role_id", roleId));
+        if (!roleRepository.existsById(roleId)) {
+            throw new CustomException(ErrorCode.ROLE_NOT_FOUND, "role_id", roleId);
+        }
 
         return document;
     }
+
     private List<DocumentFieldDto> saveRecipientFieldValues(RecipientInfoRequestDto requestDto, Document document, User user) {
         List<DocumentFieldValue> fieldValues = requestDto.getData().stream()
                 .map(fieldValueDto -> {
@@ -295,12 +302,12 @@ public class ContractService {
                                     "template_field_id", fieldValueDto.getFieldId()));
 
                     // 필드 값을 암호화하여 저장
-                    String encryptedValue = aesUtil.encrypt(fieldValueDto.getFieldValue());
+                    String encryptedValue = encryptionStrategy.encrypt(fieldValueDto.getFieldValue());
 
-                    return fieldValueDto.toEntity(document, field, user,encryptedValue);
+                    return fieldValueDto.toEntity(document, field, user, encryptedValue);
 
                 })
-                .collect(Collectors.toList());
+                .toList();
 
         documentFieldValueRepository.saveAll(fieldValues);
         // 암호화된 값 대신 원본 값으로 DTO 생성
@@ -318,9 +325,8 @@ public class ContractService {
         );
 
         // PDF 파일을 암호화하여 S3에 업로드
-        String pdfPath = s3Util.uploadEncryptedFile(multipartFile, "contract/" + document.getId());
 
-        return pdfPath;
+        return s3Util.uploadEncryptedFile(multipartFile, "contract/" + document.getId());
     }
 
     // 문서 상태 변경 메서드
@@ -332,27 +338,27 @@ public class ContractService {
 
 
     @Transactional
-    public void returnDocument(Integer userId, Integer documentId, String returnReason){
+    public void returnDocument(Integer userId, Integer documentId, String returnReason) {
 
         // Document 검증
         Document document = documentRepository.findById(documentId)
-                .orElseThrow(()-> new CustomException(ErrorCode.DOCUMENT_NOT_FOUND, "documentId", documentId));
-        
+                .orElseThrow(() -> new CustomException(ErrorCode.DOCUMENT_NOT_FOUND, DOCUMENT_ID, documentId));
+
         // 사용자 검증 (수신자인지 검증)
-        if(document.getRecipient()==null || !document.getRecipient().getId().equals(userId)){
-            throw new CustomException(ErrorCode.FORBIDDEN_ACCESS, "userId", userId)
-                    .addParameter("documentId", documentId);
+        if (document.getRecipient() == null || !document.getRecipient().getId().equals(userId)) {
+            throw new CustomException(ErrorCode.FORBIDDEN_ACCESS, USER_ID, userId)
+                    .addParameter(DOCUMENT_ID, documentId);
         }
 
         // 문서 상태 검증
-        if(!document.getStatus().equals(DocumentStatus.WAITING)){
+        if (!document.getStatus().equals(DocumentStatus.WAITING)) {
             throw new CustomException(ErrorCode.INVALID_DOCUMENT_STATUS, "status", document.getStatus())
-                    .addParameter("documentId", documentId);
+                    .addParameter(DOCUMENT_ID, documentId);
         }
-        
+
         // 반송 이유 업데이트
         document.updateReturnReason(returnReason);
-        
+
         // 문서 상태 업데이트
         document.updateStatus(DocumentStatus.RETURNED);
     }
